@@ -1,3 +1,7 @@
+Current
+-------
+-Fixed #32942 - The odata.serviceRoot property does not affect "@odata.context" for the Service Document
+
 20170518
 --------
 -Added #32414 - Create scripts to manage the odata4 service as Windows service
